Added Play pause Button, still pending

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="player-container">
           <div class="player">
-            <button class="play">Play</button>
+            <button class="play"></button>
             <button class="pause hidden">Pause</button>
           </div>
         </div>
@@ -35,4 +35,5 @@
       </div>
     </div>
   </body>
+  <script src="./index.js"></script>
 </html>
